--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,20 @@
 @import url("reset.css");
+@import url(https://fonts.googleapis.com/css?family=Roboto:400);
 
 body {
-  padding-top: 2em;
-  background-color: #f0f0f0;
-  font-family: helvetica, verdana, sans-serif;
+  background-color: #333;
+  color: #ccc;
+  line-height: 1.4;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
 }
 
 h1 {
-  padding: 1em 0;
+  padding: 2em 0;
+  line-height: normal;
   text-align: center;
-  font-size: 2em;
+  text-shadow: 5px 5px 5px #000;
+  font-size: 5em;
 }
 
 a {
@@ -21,64 +26,56 @@ a.underline {
   text-decoration: underline;
 }
 
-/* Table (#iptable) */
-#iptable {
-  margin: 0 auto;
-  background-color: #fff;
-  border: 1px solid #e0e0e0;
-  border-collapse: separate;
-  border-radius: 10px;
-}
-
-#iptable tr {
-  line-height: 2em;
-}
-
-#iptable tr:nth-child(even) {
-  background-color: #f8f8f8;
-}
-
-#iptable th {
-  padding-left: 2em;
-  padding-right: 0.5em;
-  text-align: right;
-}
-
-#iptable td {
-  padding-right: 2em;
+/* Info (#info) */
+#info {
+  text-shadow: 2px 2px 2px #000;
 }
 
 /* About (#about) */
+.toggleAbout {
+  cursor: pointer;
+}
+
 #about {
   display: none;
   position: absolute;
-  top:0;
+  top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  width: 75%;
-  height: 75%;
+  width: 600px;
+  height: 200px;
   margin: auto;
   padding: 1em;
-  background-color: #fff;
-  border: 1px solid #e0e0e0;
-  border-radius: 10px;
+  color: #333;
+  background-color: #eee;
+  border-radius: 4px;
 }
 
 #about #close {
   position: absolute;
-  top: -1em;
-  right: 1em;
-  opacity: 0.5;
-  text-transform: uppercase;
-} 
+  top: 4px;
+  right: 14px;
+  text-shadow: none;
+  font-size: 2em;
+}
+
+#about #text {
+  text-align: center;
+  text-shadow: none;
+}
+
+#about #text h1 {
+  padding: 1em 0;
+  font-size: 2em;
+  text-shadow: none;
+}
 
 /* Footer (footer) */
 footer {
   position: absolute;
   bottom: 0;
-  right: 0;
+  left: 0;
   padding: 0.5em;
-  opacity: 0.5;
   font-size: 0.8em;
 }
