--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,81 +1,125 @@
 @import "reset";
-@import url(https://fonts.googleapis.com/css?family=Roboto:400);
+
+$font-size-base: 14px;
 
 body {
-  background-color: #333;
-  color: #ccc;
-  line-height: 1.4;
-  font-family: 'Roboto', sans-serif;
-  text-align: center;
-}
-
-h1 {
-  padding: 2em 0;
-  line-height: normal;
-  text-align: center;
-  text-shadow: 5px 5px 5px #000;
-  font-size: 5em;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  background-color: #c9c9c9;
+  color: #333;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: $font-size-base;
+  line-height: 1.3;
 }
 
 a {
   color: inherit;
   text-decoration: none;
 }
-
-a.underline {
+.link {
+  cursor: pointer;
+}
+a:hover, .link:hover {
   text-decoration: underline;
 }
 
-/* Info (#info) */
-#info {
-  text-shadow: 2px 2px 2px #000;
+.underline {
+  text-decoration: underline;
 }
 
-/* About (#about) */
-.toggleAbout {
-  cursor: pointer;
+.top {
+  flex: 2;
+  display: flex;
+  background: #e3e3e3;
+  font-size: $font-size-base * 4;
+
+  .ip {
+    margin: auto;
+  }
 }
 
-#about {
-  display: none;
-  position: absolute;
+.center {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: $font-size-base * 2;
+  text-align: center;
+}
+
+.bottom {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  text-align: center;
+
+  div {
+    margin-bottom: $font-size-base;
+  }
+}
+
+
+.about {
+  display: flex;
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  width: 600px;
-  height: 200px;
-  margin: auto;
-  padding: 1em;
-  color: #333;
-  background-color: #eee;
-  border-radius: 4px;
+  background: rgba(0, 0, 0, 0.5);
+
+  .content {
+    position: relative;
+    margin: auto;
+    padding: $font-size-base;
+    width: 400px;
+    max-width: 80vw;
+    background-color: #eee;
+    border-radius: $font-size-base / 3;
+
+    .close {
+      position: absolute;
+      top: -4px;
+      right: 0;
+      padding: 4px;
+      font-size: $font-size-base * 1.5;
+      cursor: pointer;
+    }
+
+    p {
+      margin-bottom: $font-size-base / 3;
+    }
+    .header {
+      margin-bottom: $font-size-base / 2;
+      font-size: $font-size-base * 2;
+    }
+  }
 }
 
-#about #close {
-  position: absolute;
-  top: 4px;
-  right: 14px;
-  text-shadow: none;
-  font-size: 2em;
+.hidden {
+  display: none;
+  visibility: hidden;
 }
 
-#about #text {
-  text-align: center;
-  text-shadow: none;
+@media screen and (max-width: 549px) {
+  .top {
+    font-size: $font-size-base * 3;
+  }
+  .center,
+  .about .content .header {
+    font-size: $font-size-base * 1.5;
+  }
 }
 
-#about #text h1 {
-  padding: 1em 0;
-  font-size: 2em;
-  text-shadow: none;
-}
-
-/* Footer (footer) */
-footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  padding: 0.5em;
-  font-size: 0.8em;
+@media screen and (max-width: 400px) {
+  .top {
+    font-size: $font-size-base * 2;
+  }
+  .center,
+  .about .content .header {
+    font-size: $font-size-base * 1.2;
+  }
 }
