--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,4 @@
-@import "reset";
-
-$font-size-base: 14px;
+@import "reset.css";
 
 body {
   display: flex;
@@ -9,7 +7,7 @@ body {
   background-color: #c9c9c9;
   color: #333;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: $font-size-base;
+  font-size: 14px;
   line-height: 1.3;
 }
 
@@ -17,10 +15,13 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
 .link {
   cursor: pointer;
 }
-a:hover, .link:hover {
+
+a:hover,
+.link:hover {
   text-decoration: underline;
 }
 
@@ -32,11 +33,11 @@ a:hover, .link:hover {
   flex: 2;
   display: flex;
   background: #e3e3e3;
-  font-size: $font-size-base * 4;
+  font-size: calc(14px * 4);
+}
 
-  .ip {
-    margin: auto;
-  }
+.top .ip {
+  margin: auto;
 }
 
 .center {
@@ -45,7 +46,7 @@ a:hover, .link:hover {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: $font-size-base * 2;
+  font-size: calc(14px * 2);
   text-align: center;
 }
 
@@ -55,12 +56,11 @@ a:hover, .link:hover {
   justify-content: center;
   align-items: flex-end;
   text-align: center;
-
-  div {
-    margin-bottom: $font-size-base;
-  }
 }
 
+.bottom div {
+  margin-bottom: 14px;
+}
 
 .about {
   display: flex;
@@ -70,33 +70,34 @@ a:hover, .link:hover {
   left: 0;
   right: 0;
   background: rgba(0, 0, 0, 0.5);
+}
 
-  .content {
-    position: relative;
-    margin: auto;
-    padding: $font-size-base;
-    width: 400px;
-    max-width: 80vw;
-    background-color: #eee;
-    border-radius: $font-size-base / 3;
+.about .content {
+  position: relative;
+  margin: auto;
+  padding: 14px;
+  width: 400px;
+  max-width: 80vw;
+  background-color: #eee;
+  border-radius: calc(14px / 3);
+}
 
-    .close {
-      position: absolute;
-      top: -4px;
-      right: 0;
-      padding: 4px;
-      font-size: $font-size-base * 1.5;
-      cursor: pointer;
-    }
+.about .content .close {
+  position: absolute;
+  top: -4px;
+  right: 0;
+  padding: 4px;
+  font-size: calc(14px * 1.5);
+  cursor: pointer;
+}
 
-    p {
-      margin-bottom: $font-size-base / 3;
-    }
-    .header {
-      margin-bottom: $font-size-base / 2;
-      font-size: $font-size-base * 2;
-    }
-  }
+.about .content p {
+  margin-bottom: calc(14px / 3);
+}
+
+.about .content .header {
+  margin-bottom: calc(14px / 2);
+  font-size: calc(14px * 2);
 }
 
 .hidden {
@@ -106,20 +107,22 @@ a:hover, .link:hover {
 
 @media screen and (max-width: 549px) {
   .top {
-    font-size: $font-size-base * 3;
+    font-size: calc(14px * 3);
   }
+
   .center,
   .about .content .header {
-    font-size: $font-size-base * 1.5;
+    font-size: calc(14px * 1.5);
   }
 }
 
 @media screen and (max-width: 400px) {
   .top {
-    font-size: $font-size-base * 2;
+    font-size: calc(14px * 2);
   }
+
   .center,
   .about .content .header {
-    font-size: $font-size-base * 1.2;
+    font-size: calc(14px * 1.2);
   }
 }
