--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,8 +1,9 @@
 @import "reset.css";
 
 body {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  align-items: stretch;
   height: 100vh;
   background-color: #c9c9c9;
   color: #333;
@@ -11,98 +12,59 @@ body {
   line-height: 1.3;
 }
 
+body > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 a {
   color: inherit;
   text-decoration: none;
 }
 
-.link {
-  cursor: pointer;
-}
-
-a:hover,
-.link:hover {
-  text-decoration: underline;
-}
-
-.underline {
+a:hover {
   text-decoration: underline;
 }
 
 .top {
-  flex: 2;
-  display: flex;
   background: #e3e3e3;
   font-size: calc(14px * 4);
 }
 
-.top .ip {
-  margin: auto;
-}
-
-.center {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(14px * 2);
-  text-align: center;
-}
-
 .bottom {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  text-align: center;
-}
-
-.bottom div {
-  margin-bottom: 14px;
-}
-
-.about {
-  display: flex;
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: rgba(0, 0, 0, 0.5);
-}
-
-.about .content {
-  position: relative;
-  margin: auto;
-  padding: 14px;
-  width: 400px;
-  max-width: 80vw;
-  background-color: #eee;
-  border-radius: calc(14px / 3);
-}
-
-.about .content .close {
-  position: absolute;
-  top: -4px;
-  right: 0;
-  padding: 4px;
-  font-size: calc(14px * 1.5);
-  cursor: pointer;
-}
-
-.about .content p {
-  margin-bottom: calc(14px / 3);
-}
-
-.about .content .header {
-  margin-bottom: calc(14px / 2);
   font-size: calc(14px * 2);
 }
 
-.hidden {
-  display: none;
-  visibility: hidden;
+footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  font-size: small;
+}
+
+footer ul {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+  margin: 1rem 0;
+}
+
+footer li {
+  display: inline-flex;
+  line-height: 1rem;
+  border-left: solid 1px #333;
+  margin-left: .5rem;
+  padding-left: .5rem;
+}
+
+footer li:first-child {
+  border-left: 0;
+  margin-left: 0;
+  padding-left: 0;
 }
 
 @media screen and (max-width: 549px) {
@@ -110,8 +72,7 @@ a:hover,
     font-size: calc(14px * 3);
   }
 
-  .center,
-  .about .content .header {
+  .bottom {
     font-size: calc(14px * 1.5);
   }
 }
@@ -121,8 +82,7 @@ a:hover,
     font-size: calc(14px * 2);
   }
 
-  .center,
-  .about .content .header {
+  .bottom {
     font-size: calc(14px * 1.2);
   }
 }
