Change top/bottom from class to id

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -28,12 +28,12 @@ a:hover {
   text-decoration: underline;
 }
 
-.top {
+#top {
   background: #e3e3e3;
   font-size: calc(14px * 4);
 }
 
-.bottom {
+#bottom {
   font-size: calc(14px * 2);
 }
 
@@ -68,21 +68,21 @@ footer li:first-child {
 }
 
 @media screen and (max-width: 549px) {
-  .top {
+  #top {
     font-size: calc(14px * 3);
   }
 
-  .bottom {
+  #bottom {
     font-size: calc(14px * 1.5);
   }
 }
 
 @media screen and (max-width: 400px) {
-  .top {
+  #top {
     font-size: calc(14px * 2);
   }
 
-  .bottom {
+  #bottom {
     font-size: calc(14px * 1.2);
   }
 }
