--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2,7 +2,7 @@
 
 body {
   display: grid;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 3fr 2fr 1fr;
   align-items: stretch;
   height: 100vh;
   background-color: #c9c9c9;
@@ -12,7 +12,7 @@ body {
   line-height: 1.3;
 }
 
-body > div {
+body > * {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -28,33 +28,25 @@ a:hover {
   text-decoration: underline;
 }
 
-#top {
+header {
   background: #e3e3e3;
   font-size: calc(14px * 4);
 }
 
-#bottom {
+section {
   font-size: calc(14px * 2);
 }
 
 footer {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  font-size: small;
+  justify-content: flex-end;
 }
 
 footer ul {
   display: flex;
-  justify-content: center;
-  list-style: none;
-  padding: 0;
   margin: 1rem 0;
 }
 
 footer li {
-  display: inline-flex;
   line-height: 1rem;
   border-left: solid 1px #333;
   margin-left: .5rem;
@@ -68,21 +60,21 @@ footer li:first-child {
 }
 
 @media screen and (max-width: 549px) {
-  #top {
+  header {
     font-size: calc(14px * 3);
   }
 
-  #bottom {
+  section {
     font-size: calc(14px * 1.5);
   }
 }
 
 @media screen and (max-width: 400px) {
-  #top {
+  header {
     font-size: calc(14px * 2);
   }
 
-  #bottom {
+  section {
     font-size: calc(14px * 1.2);
   }
 }
