--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -59,6 +59,10 @@ footer li:first-child {
   padding-left: 0;
 }
 
+.pointer {
+  cursor: pointer;
+}
+
 @media screen and (max-width: 549px) {
   header {
     font-size: calc(14px * 3);
